Updated xml file to add is_inherit field. Fixed css file to address overflow issue. Fixed script code to be put on the block file instead of the front-end file.

--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -8,3 +8,4 @@
 .usslick__slide--link,
 .usslick__slide--unlink { height: 100%; }
 .usslick__slider .slick-slide { height: auto; }
+.usslick__slide--inner { overflow: hidden; }
